[package]
name = "maze-rs"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-graph = { path = "../bit-graph-rs" }
winit = "0.22"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = "1.4"
imgui = "0.5"
imgui-wgpu = "0.10"
imgui-winit-support = "0.5.0"


[dependencies.wgpu]
version = "0.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

 

 
